change: fix docs some errors and add java 22 api doc